// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RSVP block reducer should set the created flag 1`] = `
Object {
  "created": true,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the going count 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "goingCount": 10,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the has changes 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": true,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the id 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 42,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the is loading 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": true,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the is settings loading 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": true,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the not going count 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 10,
  "settingsOpen": false,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the settings open 1`] = `
Object {
  "created": false,
  "details": Object {
    "capacity": "",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
  "goingCount": 0,
  "hasChanges": false,
  "headerImage": Object {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "id": 0,
  "isLoading": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": true,
  "tempDetails": Object {
    "capacity": "",
    "description": "",
    "endDate": "2118-07-19",
    "endDateInput": "July 19, 2118",
    "endDateMoment": "2118-07-19T19:30:00.000Z",
    "endTime": "19:30:00",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "July 19, 2018",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "title": "",
  },
}
`;
